--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@ http://www.tooplate.com/view/2101-insertion
       <div class="row tm-about-row tm-mb-medium">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
           <h4 class="mb-4 tm-font-300">Latest Albums</h4>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Sed fringilla consectetur</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Youtube</a>
           <a href="#" class="tm-text-blue-dark d-block mb-2">Mauris porta nisl quis</a>
           <a href="#" class="tm-text-blue-dark d-block mb-2">Quisque maximus quam nec</a>
           <a href="#" class="tm-text-blue-dark d-block">Class aptent taciti sociosqu ad</a>
