--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ http://www.tooplate.com/view/2101-insertion
             <input type="text" name="keyword" class="form-control tm-search-input" placeholder="Type your keyword ...">
             <input type="submit" value="Search" class="form-control tm-search-submit">
           </div>
-          <div class="form-group tm-advanced-box">
+          <!-- <div class="form-group tm-advanced-box">
             <a href="#" class="tm-text-white">Go Advanced ...</a>
-          </div>
+          </div> -->
         </form>
       </div>
 
@@ -154,14 +154,14 @@ http://www.tooplate.com/view/2101-insertion
 
             <div class="media">
               <img src="img/insertion-140x140-02.jpg" alt="Image" class="mr-3">
-              <div class="media-body tm-bg-light-green">
+              <div class="media-body tm-bg-gray">
                 <div class="tm-description-box">
-                  <h5 class="tm-text-pink">Proin fermentum sapien sed nisl</h5>
+                  <h5 class="tm-text-blue">Proin fermentum sapien sed nisl</h5>
                   <p class="mb-0">Donec est felis, posuere viverra dapibus ac, pretium vel libero. Aliquam consectetur, arcu eget euismod congue, tortor metus vehicula.</p>
                 </div>
                 <div class="tm-buy-box">
                   <a href="#" class="tm-bg-light-green tm-text-white tm-buy">buy</a>
-                  <span class="tm-text-pink tm-price-tag">$7.25</span>
+                  <span class="tm-text-blue tm-price-tag">$7.25</span>
                 </div>
               </div>
             </div>
@@ -182,14 +182,14 @@ http://www.tooplate.com/view/2101-insertion
 
             <div class="media">
               <img src="img/insertion-140x140-04.jpg" alt="Image" class="mr-3">
-              <div class="media-body tm-bg-light-green">
+              <div class="media-body tm-bg-gray">
                 <div class="tm-description-box">
-                  <h5 class="tm-text-pink">Vestibulum mattis quam sodales</h5>
+                  <h5 class="tm-text-blue">Vestibulum mattis quam sodales</h5>
                   <p class="mb-0">Curabitur id tempor orci. Fusce efficitur in enim sit amet sodales. Proin id gravida leo. Phasellus non quam et justo faucibus rhoncus.</p>
                 </div>
                 <div class="tm-buy-box">
                   <a href="#" class="tm-bg-light-green tm-text-white tm-buy">buy</a>
-                  <span class="tm-text-pink tm-price-tag">$3.75</span>
+                  <span class="tm-text-blue tm-price-tag">$3.75</span>
                 </div>
               </div>
             </div>
@@ -213,12 +213,12 @@ http://www.tooplate.com/view/2101-insertion
 
       <div class="row tm-mb-big tm-subscribe-row">
         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 tm-bg-gray tm-subscribe-form">
-          <h3 class="tm-text-pink tm-mb-30">Subscribe our updates!</h3>
+          <h3 class="tm-text-blue tm-mb-30">Subscribe for updates!</h3>
           <p class="tm-mb-30">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi semper, ligula et pretium porttitor, leo orci accumsan ligula.</p>
           <form action="index.html" method="POST">
             <div class="form-group mb-0">
               <input type="text" class="form-control tm-subscribe-input" placeholder="Your Email">
-              <input type="submit" value="Submit" class="tm-bg-pink tm-text-white d-block ml-auto tm-subscribe-btn">
+              <input type="submit" value="Submit" class="tm-bg-light-green tm-text-white d-block ml-auto tm-subscribe-btn">
             </div>
           </form>
         </div>
@@ -250,9 +250,7 @@ http://www.tooplate.com/view/2101-insertion
       </div>
       <footer class="row">
         <div class="col-xl-12">
-          <p class="text-center p-4">Copyright &copy; <span class="tm-current-year"></span> Master butter
-          
-          - Design by:  Rhema and Chaike</p>
+          <p class="text-center p-4">Copyright &copy; <span class="tm-current-year"></span></p>
         </div>
       </footer>
     </div> <!-- .container -->
