--- a/contact.html
+++ b/contact.html
@@ -82,17 +82,17 @@ http://www.tooplate.com/view/2101-insertion
             <input type="text" name="keyword" class="form-control tm-search-input" placeholder="Type your keyword ...">
             <input type="submit" value="Search" class="form-control tm-search-submit">
           </div>
-          <div class="form-group tm-advanced-box">
+          <!-- <div class="form-group tm-advanced-box">
             <a href="#" class="tm-text-white">Go Advanced ...</a>
-          </div>
+          </div> -->
         </form>
       </div>
 
       <div class="row tm-mt-big tm-about-row tm-mb-medium">
         <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12 tm-contact-col">
-          <div class="tm-contact-left tm-bg-pink-light-2 tm-text-white text-right p-md-5 p-4">
+          <div class="tm-contact-left tm-bg-light-green tm-text-white text-right p-md-5 p-4">
             <i class="fas fa-3x fa-comments mb-4"></i>
-            <h2 class="tm-media-2-header">Contact Us</h2>
+            <h2 class="tm-media-2-header ">Contact Us</h2>
           </div>
           <div class="tm-bg-gray tm-contact-middle">
             <form action="#" method="post">
@@ -153,31 +153,29 @@ http://www.tooplate.com/view/2101-insertion
       <div class="row tm-about-row tm-mb-medium">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
           <h4 class="mb-4 tm-font-300">Latest Albums</h4>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Sed fringilla consectetur</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Mauris porta nisl quis</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Quisque maximus quam nec</a>
-          <a href="#" class="tm-text-blue-dark d-block">Class aptent taciti sociosqu ad</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Dokumentacija</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">O autoru</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Home</a>
+          <a href="#" class="tm-text-blue-dark d-block">Kontakt</a>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
           <h4 class="mb-4 tm-font-300">Our Pages</h4>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Nam dapibus imperdiet</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Primis in faucibus orci</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Sed interdum blandit dictum</a>
-          <a href="#" class="tm-text-blue-dark d-block">Donec non blandit nisl</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Youtube</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Twitter</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Instagram</a>
+          <a href="#" class="tm-text-blue-dark d-block">Twitch</a>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
           <h4 class="mb-4 tm-font-300">Quick Links</h4>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Nullam scelerisque mauris</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Vivamus tristique enim non orci</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Luctus et ultrices posuere</a>
-          <a href="#" class="tm-text-blue-dark d-block">Cubilia Curae</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Html</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Rss</a>
+          <a href="#" class="tm-text-blue-dark d-block mb-2">Jquery</a>
+          <a href="#" class="tm-text-blue-dark d-block">Sitemap</a>
         </div>
       </div>
       <footer class="row tm-about-row">
         <div class="col-xl-12">
-          <p class="text-center p-4">Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name 
-          
-          - Design:  Tooplate</p>
+          <p class="text-center p-4">Copyright &copy; <span class="tm-current-year"></span></p>
         </div>
       </footer>
     </div> <!-- .container -->
